[gd_scene load_steps=6 format=2]

[ext_resource path="res://styles/scifi_theme.tres" type="Theme" id=1]
[ext_resource path="res://PausePanel.gd" type="Script" id=2]
[ext_resource path="res://effects/welcome.wav" type="AudioStream" id=3]
[ext_resource path="res://AudioLevels.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0

[node name="PausePanel" type="PanelContainer" groups=[
"GUI",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 7
size_flags_vertical = 0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0

[node name="HSplitContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer2"]
margin_right = 490.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Hello. Thank you for playing.

This game was created by PlexSoup for the
	 Blackthorn Prod Game Jam.
Source is available on [url]https://github.com/plexsoup[/url]

Images: game-icons.net, NASA
Software: Godot, Inkscape, Gimp, Audacity.
Music: 'Blue Feather', Kevin Macleod. Voices: ttsreader.com"
text = "Hello. Thank you for playing.

This game was created by PlexSoup for the
	 Blackthorn Prod Game Jam.
Source is available on https://github.com/plexsoup

Images: game-icons.net, NASA
Software: Godot, Inkscape, Gimp, Audacity.
Music: 'Blue Feather', Kevin Macleod. Voices: ttsreader.com"

[node name="WelcomeVoice" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/HSplitContainer2/RichTextLabel"]
stream = ExtResource( 3 )
volume_db = -9.0

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer2"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Controls
* WASD = move
* Space = shoot
* Esc = pause

Collect commodities from planets, check the market pricelist, select a planet with the best prices, then deliver the goods."

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 483.0
margin_right = 984.0
margin_bottom = 529.0
columns = 2

[node name="AudioOptions" type="HSplitContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 490.0
margin_bottom = 21.0
size_flags_horizontal = 3
collapsed = true
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/AudioOptions"]
margin_right = 245.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Master"

[node name="Master" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer/AudioOptions"]
margin_left = 245.0
margin_right = 490.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = true
script = ExtResource( 4 )

[node name="AudioOptions2" type="HSplitContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 21.0
size_flags_horizontal = 3
collapsed = true
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/AudioOptions2"]
margin_right = 245.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Music"

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer/AudioOptions2"]
margin_left = 245.0
margin_right = 490.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = true
script = ExtResource( 4 )
Bus = 1

[node name="AudioOptions3" type="HSplitContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 25.0
margin_right = 490.0
margin_bottom = 46.0
size_flags_horizontal = 3
collapsed = true
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/AudioOptions3"]
margin_right = 245.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "SoundFX"

[node name="SoundFx" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer/AudioOptions3"]
margin_left = 245.0
margin_right = 490.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = true
script = ExtResource( 4 )
Bus = 2

[node name="AudioOptions4" type="HSplitContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 494.0
margin_top = 25.0
margin_right = 984.0
margin_bottom = 46.0
size_flags_horizontal = 3
collapsed = true
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/AudioOptions4"]
margin_right = 245.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Voices"

[node name="Voices" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer/AudioOptions4"]
margin_left = 245.0
margin_right = 490.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0
ticks_on_borders = true
script = ExtResource( 4 )
Bus = 3

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 533.0
margin_right = 984.0
margin_bottom = 560.0
split_offset = 100
collapsed = true
dragger_visibility = 1

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer"]
pause_mode = 2
margin_right = 486.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Quit"

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer"]
pause_mode = 2
margin_left = 498.0
margin_right = 984.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Resume"
[connection signal="visibility_changed" from="." to="." method="_on_PausePanel_visibility_changed"]
[connection signal="meta_clicked" from="MarginContainer/VBoxContainer/HSplitContainer2/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HSplitContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
